WEB-11410: Fix search_pref_update and search criteria menu spacing.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -4825,7 +4825,7 @@ button.tertiary {
 #search-criteria-options {
   color: $type-base-color;
   border: 1px solid $faint-neutral-color;
-  padding: 6px 20px;
+  padding: 6px 10px;
   font-weight: 300;
   font-size: 9pt;
   position: absolute;
@@ -4849,7 +4849,7 @@ button.tertiary {
 #search-criteria-options input[type='checkbox'] {
   border: none !important;
   box-shadow: none !important;
-  margin: 0 6px;
+  margin: 0 4px 0 0;
   min-height: unset;
   outline: none !important;
   position: relative;
@@ -4857,11 +4857,10 @@ button.tertiary {
 }
 
 .search-criteria-label {
-  padding: 6px 0 1px 0;
-  display: inline-flex;
   align-items: center;
-  white-space: nowrap;
+  display: inline-flex;
   height: 30px;
+  padding: 6px 0 1px 0;
 }
 
 .multicol-2 {
